version 0.97
- add various formats to copy of models to clipboard (HTML,
  RTF, LaTeX)
- Fixes to BOX1 datafile reading function
- small fixes to display of databases
- revert behavior in case of taking logs of series with non-
  positive values (i.e. fail gracefully)
- add initial gnome support
- convert manual to SGML (DocBook) and update
- support directory names with spaces (yuck) under win32 
- under win32, use registry instead of system-wide config file
  libgretl.cfg and per-user gretl.rc
- add check for GRETL_HOME environment variable
- make gnuplot command configurable under Preferences (meant
  for win32)
- add a menu bar to the spreadsheet window

07/26/2001 version 0.96
- update to gtkextra version 0.99.16
- fix bug in Preferences/Toolbar entries

07/17/2001 version 0.95
- update to gtkextra version 0.99.15
- fix crash bug on opening a saved "session"
- fix bug that broke the "run" command on win32

06/14/2001 version 0.94
- make "false" the default for the automatic gretl update query
  on startup
- catch errors in ar, tsls and scatters commands due to insufficient
  arguments

05/11/2001 version 0.93
- fix problem with printing of actual, fitted and residual in the
  case of a binary dependent variable
- CVS data export: put quote marks around the dates or observation
  marker strings

04/23/2001 version 0.92
- library version goes to 6.0.0
- fixes to pprintf() function
- add "pooled OLS" model command and panel diagnostics test
  (fixed effects and random effects models)
- various fixes suggested by lclint
- fix bug with zero return from, e.g., auxreg() when there's
  an error and the return should be non-zero
- fix bug: logs command in script mode producing spurious error
- fix bug: when starting a new data set from a gretl database,
  datainfo->markers was not set to 0, which could produce a crash
- add options for compacting data when adding a higher-frequency
  series from a database to the working data set

04/03/2001 version 0.91