@@ -441,73 +441,6 @@ void criteria (const double ess, const int nobs, const int ncoeff,
 
 /* ....................................................... */
 
-void free_corrmat (CORRMAT *corrmat)
-{
-    free(corrmat->list);
-    free(corrmat->xpx);
-    free(corrmat);
-}
-
-/* ....................................................... */
-
-CORRMAT *corrlist (int *list, double **pZ, const DATAINFO *pdinfo)
-/* computes pairwise correlation coefficients for 
-   variables in list, skipping any constants, from
-   observation pdinfo->t1 to pdinfo->t2.  
-*/
-{
-    CORRMAT *corrmat;
-    int *p = NULL;
-    int i, j, lo, nij, mm;
-    int t1 = pdinfo->t1, t2 = pdinfo->t2, n = pdinfo->n; 
-
-    corrmat = malloc(sizeof *corrmat);
-    if (corrmat == NULL) return NULL;
-
-    copylist(&p, list);
-    if (p == NULL) {
-	free(corrmat);
-	return NULL;
-    }	
-
-    /* drop any constants from list */
-    for (i=1; i<=p[0]; i++) {
-	if (isconst(t1, t2, &(*pZ)[n * p[i]])) {
-	    list_exclude(i, p);
-	    i--;
-	}
-    }
-    corrmat->list = p;
-
-    lo = corrmat->list[0];  
-    corrmat->n = t2 - t1 + 1;
-    mm = (lo * (lo + 1))/2;
-    corrmat->xpx = malloc(mm * sizeof(double));
-    if (corrmat->xpx == NULL) {
-	free_corrmat(corrmat);
-	return NULL;
-    }
-    for (i=1; i<=lo; i++) {   
-	for (j=i; j<=lo; j++)  {
-	    nij = ijton(i, j, lo);
-	    if (i == j) {
-		corrmat->xpx[nij] = 1.0;
-		continue;
-	    }
-	    corrmat->xpx[nij] = corr(corrmat->n, 
-				     &(*pZ)[n * corrmat->list[i] + t1],
-				     &(*pZ)[n * corrmat->list[j] + t1]);
-	}
-    }
-
-    corrmat->t1 = t1;
-    corrmat->t2 = t2;
-
-    return corrmat;
-}
-
-/* ....................................................... */
-
 int adjust_t1t2 (MODEL *pmod, const int *list, int *t1, int *t2, 
 		 const double *Z, const int n, int *misst)
      /* drop first/last observations from sample if missing obs 
