@@ -113,10 +113,6 @@ int re_estimate (char *model_spec, MODEL *tmpmod, DATAINFO *pdinfo,
 
 double *copyvec (const double *src, const int n);
 
-CORRMAT *corrlist (int *list, double **pZ, const DATAINFO *pdinfo);
-
-void free_corrmat (CORRMAT *corrmat);
-
 int ijton (const int i, const int j, const int lo);
 
 #endif /* UTILS_H */
